add endpoint for calling the preservica manifestation plugin directly
